--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-wrap-in-js": "^1.1.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.9.1",
     "file-loader": "^1.1.11",
@@ -41,6 +42,7 @@
     "postcss-loader": "^2.1.5",
     "raw-loader": "^0.5.1",
     "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "tailwindcss": "^0.5.3",
     "url-loader": "^1.0.1"
   }
