--- a/.babelrc
+++ b/.babelrc
@@ -18,5 +18,16 @@
       ]
     ],
     "presets": ["next/babel"],
-    "ignore": []
+    "ignore": [],
+    "env": {
+      "development": {
+        "presets": ["next/babel"]
+      },
+      "production": {
+        "presets": ["next/babel"]
+      },
+      "test": {
+        "presets": [["next/babel", { "preset-env": { "modules": "commonjs" } }]]
+      }
+    }
   }
