--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "yarn build && node prod/server/server.js",
+    "dev": "node prod/server.js",
     "build": "yarn clean && next build && tsc --project tsconfig.server.json",
     "start": "NODE_ENV=production node server.js",
     "clean": "rm -rf .next/ && rm -rf prod/"
@@ -33,11 +33,11 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
-    "ts-node": "^7.0.0",
-    "typescript": "^2.9.2"
+    "ts-node": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^10.3.5",
+    "@types/react": "^16.4.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "css-loader": "^0.28.11",
@@ -50,6 +50,7 @@
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "tailwindcss": "^0.5.3",
+    "typescript": "^2.9.2",
     "url-loader": "^1.0.1"
   }
 }
