--- a/.babelrc
+++ b/.babelrc
@@ -17,17 +17,9 @@
         }
       ]
     ],
-    "presets": ["next/babel"],
-    "ignore": [],
-    "env": {
-      "development": {
-        "presets": ["next/babel"]
-      },
-      "production": {
-        "presets": ["next/babel"]
-      },
-      "test": {
-        "presets": [["next/babel", { "preset-env": { "modules": "commonjs" } }]]
-      }
-    }
+    "presets": [
+      "next/babel", 
+      "@zeit/next-typescript/babel"
+    ],
+    "ignore": []
   }
