--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "postbuild": "cp -r static .next/"
   },
   "dependencies": {
     "@zeit/next-css": "^0.2.0",
@@ -36,6 +37,9 @@
     "babel-plugin-wrap-in-js": "^1.1.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
     "file-loader": "^1.1.11",
     "postcss-easy-import": "^3.0.0",
